--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Bikash",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.19.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.0",
     "mongoose": "^8.2.3",
     "nodemon": "^3.1.0",
     "router": "^2.0.0-beta.2"
